# vpss

./: .gitignore  README.md  setup.cfg
lib/: setup.py
lib/sim_search/: __init__.py  fill_patches.py  imgs2patches.py  impl.py  l2norm_impl.py
lib/sim_search/apps/: __init__.py  imgs2patches.py
lib/vpss/: __init__.py  fill_image.py  fill_patches.py  imgs2patches.py  impl.py  l2norm_impl.py  needle_impl.py  sim_img.py  sim_kernel.py  utils.py  warp_img.py
lib/vpss/utils/: __init__.py  color.py  patch_utils.py  utils.py
script/: example.py
