[metadata]
name = vpss
version = 0.0.1
author = Kent Gauen
author_email = kent.gauen@gmail.com
description = A Python implementation of Patch Similarity Searching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gauenk/vpss
project_urls =
    Bug Tracker = https://github.com/gauenk/vpss/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./lib
packages = find:
    
[options.packages.find]
where = ./lib